# active-learning-landsat

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
active_learning/: __init__.py  __main__.py  data.py  experiment.py  plotting.py  strategies.py
tests/: test_experiment.py  test_strategies.py
