[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "active-learning-landsat"
version = "0.1.0"
description = "Label-efficient active learning on the Landsat (Statlog) satellite benchmark"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["active-learning", "remote-sensing", "machine-learning", "landsat", "label-efficiency"]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
active-learning-landsat = "active_learning.__main__:main"

[tool.setuptools]
packages = ["active_learning"]

[tool.pytest.ini_options]
testpaths = ["tests"]
